<resources>
    <string name="app_name">Programacion Moviles</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="txt_user">"USER"</string>
    <string name="edt_password">********</string>
    <string name="edt_user">user@email.com</string>
    <string name="btn_login">Login</string>
    <string name="btn_CheckIn">Check in</string>
    <string name="btn_save">Save</string>

    <string name="txt_tSaleRegister">Sales Register</string>
    <string name="txt_ClientSale">Client Name</string>
    <string name="txt_CodProductSale">Code Product</string>
    <string name="txt_DescriptSale">Description</string>
    <string name="txt_ValueSale">Value</string>
    <string name="txt_CantSale">Qantity</string>
    <string name="edt_ProductSale">Type</string>
    <string name="txt_name">Name</string>
    <string name="hint_name">Fullname</string>
    <string name="txt_id">Id</string>
    <string name="hint_id">Id Number</string>
    <string name="txt_email">Email</string>
    <string name="hint_email">youremail@email.com</string>
    <string name="txt_password">Password</string>
    <string name="hint_password">Your password</string>



</resources>