<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rosa_500"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".loginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:src="@drawable/imag_proy" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:bufferType="normal"
            android:text="@string/txt_user"
            android:textColor="@color/rojo_500"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_user"
            android:textSize="20sp"
            android:drawableStart="@drawable/is_email"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/prompt_password"
            android:textColor="@color/rojo_500"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_password"
            android:textSize="20sp"
            android:drawableStart="@drawable/ic_password"/>

        <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/rojo_500"
            android:text="@string/btn_login" />

        <Button

            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:backgroundTint="@color/rojo_500"
            android:text="@string/btn_CheckIn"

            />


    </LinearLayout>

</LinearLayout>