<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rosa_500"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".SaleRegister">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_500"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/logo_min" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_tSaleRegister"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/txt_ClientSale"
                android:textSize="18sp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/gray_700"
                android:gravity="left|center_vertical"
                android:hint="@string/edt_ProductSale"
                android:padding="6dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/txt_CodProductSale"
                android:textSize="18sp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/gray_700"
                android:gravity="left|center_vertical"
                android:hint="@string/edt_ProductSale"
                android:padding="6dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/txt_DescriptSale"
                android:textSize="18sp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/gray_700"
                android:gravity="left|center_vertical"
                android:hint="@string/edt_ProductSale"
                android:padding="6dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/txt_ValueSale"
                android:textSize="18sp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/gray_700"
                android:gravity="left|center_vertical"
                android:hint="@string/edt_ProductSale"
                android:padding="6dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/txt_CantSale"
                android:textSize="18sp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/gray_700"
                android:gravity="left|center_vertical"
                android:hint="@string/edt_ProductSale"
                android:padding="6dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>